Update PharmacieInfo: fix view on mobile

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -64,6 +64,7 @@
     margin: 0 auto 40px auto;
     font-size: 18px;
     line-height: 28px;
+    word-break: break-word;
 
     @include md {
       margin: 0 auto 50px auto;
